--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="https://unpkg.com/jspsych@7.3.4"></script>
   <script src="all_imageList_str.js"></script>
   <script src="stimuli_list.js"></script>
+  <script src="chunk_list.js"></script>
   
   <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.3"></script>
   <script src="https://unpkg.com/@jspsych/plugin-browser-check@1.0.3"></script>
@@ -35,16 +36,16 @@
     collectData: true,
   });
 
-  // capture info from Prolific
-  var subject_id = jsPsych.data.getURLVariable('PROLIFIC_PID');
-  var study_id = jsPsych.data.getURLVariable('STUDY_ID');
-  var session_id = jsPsych.data.getURLVariable('SESSION_ID');
+  // // capture info from Prolific
+  // var subject_id = jsPsych.data.getURLVariable('PROLIFIC_PID');
+  // var study_id = jsPsych.data.getURLVariable('STUDY_ID');
+  // var session_id = jsPsych.data.getURLVariable('SESSION_ID');
 
-  jsPsych.data.addProperties({
-    subject_id: subject_id,
-    study_id: study_id,
-    session_id: session_id
-  });
+  // jsPsych.data.addProperties({
+  //   subject_id: subject_id,
+  //   study_id: study_id,
+  //   session_id: session_id
+  // });
 
   /* Create timeline */
   var timeline = [];
@@ -222,9 +223,14 @@
   };
 
 
-  /* define number of images */
-  var numImages = 1
-  var test_stimuli = jsPsych.randomization.sampleWithoutReplacement(BOLD5000, numImages)
+  // Function to randomly pick a chunk
+  function getRandomChunk() {
+  const randomIndex = Math.floor(Math.random() * chunkList.length);
+  // const randomIndex = 2
+  return chunkList[randomIndex]; // Directly return the random chunk
+  }
+  const test_stimuli = getRandomChunk();
+  
 
 
   /* define test procedure */
@@ -368,10 +374,18 @@
   timeline.push(save_data)
 
   /* define exit */
+  // var exit_block = {
+  //   type: jsPsychHtmlKeyboardResponse,
+  //   stimulus: 'You may now exit the page.'
+  // };
+  // timeline.push(exit_block);
+
   var exit_block = {
-    type: jsPsychHtmlKeyboardResponse,
-    stimulus: 'You may now exit the page.'
-  };
+  type: jsPsychHtmlKeyboardResponse,
+  stimulus: `<p>You've finished the last task. Thanks for participating!</p>
+    <p><a href="https://app.prolific.co/submissions/complete?cc=XXXXXXX">Click here to return to Prolific and complete the study</a>.</p>`,
+  choices: "NO_KEYS"
+  }
   timeline.push(exit_block);
 
   /* start the experiment */
